Clean up conditional resolving